Improve section titles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <form>
             <div class="formIdentity">
                 <div class="formGroup">
-                    <h3>Informations sportives</h3>
+                    <h3>Le ou la Karatéka</h3>
                     <div class="formItem formItem--photo">
                         <div class="photo"></div>
                     </div>
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="formGroup">
-                    <h3>Activités</h3>
+                    <h3>Les activités</h3>
                     <div class="tableWrapper">
                         <table class="activity">
                             <tr>
@@ -134,13 +134,13 @@
                 </div>
 
                 <div class="formGroup">
-                    <h3>Pièces jointes</h3>
-                    <p>Aucun dossier incomplet ne pourra être accepté.</p>
+                    <h3>Les pièces jointes</h3>
+                    <p><i>Aucun dossier incomplet ne pourra être accepté.</i></p>
                     <div class="tableWrapper">
                         <table class="attachment">
                             <tr>
                                 <td><input type="checkbox" /></td>
-                                <td>Certificat médical daté de moins d’un an</td>
+                                <td>Certificat médical, daté de moins d’un an</td>
                             </tr>
                             <tr>
                                 <td><input type="checkbox" /></td>
@@ -163,7 +163,7 @@
             <div class="formInscription">
 
                 <div class="formGroup">
-                    <h3>Informations du responsable</h3>
+                    <h3>Les parents</h3>
                     <div class="formItem">
                         <label>Prénom</label>
                         <input type="text" />
@@ -195,7 +195,7 @@
                 </div>
 
                 <div class="formGroup">
-                    <h3>Autorisation parentale</h3>
+                    <h3>L'autorisation des parents</h3>
                     <p>
                         Je sousigné <input type="text" class="inText" />, père, mère ou tuteur de <input type="text" class="inText" />,
                         l'autorise à pratiquer le karaté au sein du No Kachi Lyon,
@@ -211,7 +211,7 @@
                 </div>
 
                 <div class="formGroup">
-                    <h3>Validation de l'inscription</h3>
+                    <h3>C'est parti !</h3>
                     <p style="margin-top: 0.5em">
                         <input type="checkbox" style="vertical-align: middle"/>
                         <span>Je souhaite recevoir des informations de la fédération par email.</span>
